--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "fbjs": "^3.0.5",
     "react": "18.2.0",
     "react-native": "0.73.3",
+    "react-native-element-dropdown": "^2.10.2",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.14.1",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
